--- a/seminar1/sem1-report.tex
+++ b/seminar1/sem1-report.tex
@@ -26,7 +26,7 @@
 \title{Seminar 1}
 \subtitle{Object-Oriented Design, IV1350}
 \author{Pontus Söderlund, psoderlu@kth.se}
-%\date{\today} Prints today's date
+% \date{\today} Prints today's date
 \date{Today's date}
 
 \begin{document}
@@ -52,7 +52,7 @@ Remember that code extracts and diagrams must be numbered, have caption and be e
 
 \begin{figure}[h!]
   \begin{center}
-    \includegraphics[scale=1.0]{sample-diag.png}
+%    \includegraphics[scale=1.0]{sample-diag.png}
     \caption{A sample diagram to illustrate caption (this text), numbering and reference in text.}
     \label{fig:diag}
   \end{center}
@@ -60,7 +60,7 @@ Remember that code extracts and diagrams must be numbered, have caption and be e
 
 \begin{figure}[h!]
   \begin{center}
-    \includegraphics[scale=0.7]{sample-code.png}
+ %   \includegraphics[scale=0.7]{sample-code.png}
     \caption{A sample code extract.}
     \label{fig:code}
   \end{center}
