--- a/seminar1/sem1-report.tex
+++ b/seminar1/sem1-report.tex
@@ -102,7 +102,7 @@
             
 
 \chapter{Result}
-\label{sec:result}
+    \label{sec:result}
     % This chapter shall contain the solution to the seminar tasks, together with
     % a short explanation. There are more detailed instructions in each
     % assignment.
@@ -110,21 +110,21 @@
     % Remember that code extracts and diagrams must be numbered, have caption and
     % be explained in the text, see figures \ref{fig:diag} and \ref{fig:code}
 
-\begin{figure}[h!]
-  \begin{center}
-%    \includegraphics[scale=1.0]{sample-diag.png}
-    \caption{A sample diagram to illustrate caption (this text), numbering and reference in text.}
-    \label{fig:diag}
-  \end{center}
-\end{figure}
+    \begin{figure}[h!]
+        \begin{center}
+            \includegraphics[scale=1.0]{dm1.png}
+            \caption{A sample diagram to illustrate caption (this text), numbering and reference in text.}
+            \label{fig:dm}
+        \end{center}
+    \end{figure}
 
-\begin{figure}[h!]
-  \begin{center}
- %   \includegraphics[scale=0.7]{sample-code.png}
-    \caption{A sample code extract.}
-    \label{fig:code}
-  \end{center}
-\end{figure}
+    \begin{figure}[h!]
+        \begin{center}
+            \includegraphics[scale=1.0]{ssd1.png}
+            \caption{A sample diagram to illustrate caption (this text), numbering and reference in text.}
+            \label{fig:ssd}
+        \end{center}
+    \end{figure}
 
 \chapter{Discussion}
 
@@ -142,14 +142,14 @@
             I would consider ''Transaction'' to be a bit of a ''spider-in-the-web''.
             However, it is justified because ''Transaction'' is such an essential
             part. Nothing else serves any purpose without a transaction since the
-            only point of a store is to facillitate transactions between parties.
+            only point of a store is to facilitate transactions between parties.
             
         \subsection{Can you understand the DM? Is it a correct description of the problem domain?}
             I think that it is clear what the different classes represent and what
             associations they have with other classes. I might be biased though.
 
         \subsection{Does the DM have a reasonable number of classes? Are important classes missing?}
-            I belive that there's a sufficent number of classes for the given
+            I believe that there's a  number of classes for the given
             requirements, if anything there are too few.
 
         \subsection{Are there irrelevant classes?}
@@ -160,8 +160,8 @@
         \subsection{Do you agree with the choices between class and attribute?}
             Yes! It might have been better to have another class called 'Payment'
             so that the customer could make a payment and the cashier could
-            recieve payment, but I do feel that that that would be uncesseary 
-            since it wouldnt add any additional infomration.
+            receive payment, but I do feel that that that would be unnecessary 
+            since it wouldn't add any additional information.
 
         \subsection{Is there a reasonable number of associations? Do you understand them? Are there classes missing associations? If so, is that a mistake?}
             No class is missing associations and I believe the associations are
@@ -169,10 +169,11 @@
             would add any value.
 
         \subsection{Are naming conventions followed in DM and SSD?}
-
+            The naming conventions follow traditional Java naming conventions.
 
         \subsection{Is UML used correctly in DM and SSD?}
-
+            Besides the associations having directions I believe the diagramss
+            adhere to the UML standard.
 
         \subsection{Are the correct objects included in the SSD?}
 
